--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.6",
+    "@googlemaps/react-wrapper": "^1.1.34",
     "@reach/combobox": "^0.17.0",
     "@react-google-maps/api": "^2.12.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -14,7 +15,9 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-image-gallery": "^1.2.8",
     "react-scripts": "^2.1.3",
+    "react-star-ratings": "^2.3.0",
     "use-places-autocomplete": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
